testsuite/tests/aggregate/invalid-checks/default.gpr
project Default is
   --  Check that these attributes are properly rejected in a
   --  non aggregate project

   for Project_Files use ("a.gpr");
end Default;
